--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,6 +34,7 @@
     "immutable": "^3.8.2",
     "jest": "20.0.4",
     "jquery": "^3.3.1",
+    "monaco-editor-webpack-plugin": "^1.4.0",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
@@ -42,6 +43,7 @@
     "react": "^16.4.1",
     "react-dev-utils": "^5.0.1",
     "react-dom": "^16.4.1",
+    "react-monaco-editor": "^0.17.2",
     "react-redux": "^5.0.7",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
