--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
     "css-loader": "0.28.7",
+    "date-fns": "^2.0.0-alpha.7",
     "dotenv": "4.0.0",
     "dotenv-expand": "4.2.0",
     "eslint": "4.10.0",
@@ -34,6 +35,8 @@
     "immutable": "^3.8.2",
     "jest": "20.0.4",
     "jquery": "^3.3.1",
+    "material-ui-datetimepicker": "^1.0.7",
+    "material-ui-pickers": "^1.0.0-rc.12",
     "monaco-editor-webpack-plugin": "^1.4.0",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
@@ -44,6 +47,7 @@
     "react-dev-utils": "^5.0.1",
     "react-dom": "^16.4.1",
     "react-monaco-editor": "^0.17.2",
+    "react-number-format": "^3.5.0",
     "react-redux": "^5.0.7",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
